# astro_metadata_translator

./: .gitignore  .pre-commit-config.yaml  .travis.yml  .yamllint.yaml  CHANGES.md  LICENSE  MANIFEST.in  README.md  SConstruct  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  types.txt
.github/workflows/: build.yaml  build_docs.yaml  docstyle.yaml  mypy.yaml
bin.src/: astrometadata  translate_header.py
corrections/DECam/: README.md
corrections/HSC/: HSC-HSCA00120600.yaml
corrections/SuprimeCam/: README.md
doc/: CHANGES.rst  README.md  conf.py  documenteer.toml  index.rst  manifest.yaml  requirements.txt
doc/astro_metadata_translator/: index.rst
doc/changes/: DM-54087.feature.rst  DM-54087.misc.rst  DM-54255.feature.rst  DM-54279.api.rst  DM-54987.misc.rst  DM-55264.bugfix.rst
doc/lsst.obs.metadata/: index.rst
doc/obs_metadata/: index.rst
python/astro_metadata_translator/: __init__.py  file_helpers.py  headers.py  indexing.py  observationGroup.py  observationInfo.py  properties.py  tests.py  translator.py
python/astro_metadata_translator/cli/: astrometadata.py
python/astro_metadata_translator/corrections/CFHT/: README.md
python/astro_metadata_translator/corrections/HSC/: README.md
python/astro_metadata_translator/corrections/SDSS/: README.md
python/astro_metadata_translator/serialize/: __init__.py  fits.py
python/astro_metadata_translator/translators/: __init__.py  decam.py  fits.py  helpers.py  hsc.py  megaprime.py  sdss.py  subaru.py  suprimecam.py  visit_info.py
python/lsst/obs/metadata/: __init__.py  metadata.py  observationInfo.py  properties.py  translator.py  visitinfo.py
python/lsst/obs/metadata/translators/: __init__.py  decam.py  fits.py  helpers.py  hsc.py  megaprime.py  subaru.py  suprimecam.py
tests/: helper.py  test_basics.py  test_cfht.py  test_cli.py  test_decam.py  test_extension.py  test_extensions.py  test_groups.py  test_headers.py  test_indexing.py  test_schema.py  test_sdss.py  test_serialization.py  test_shadowing.py  test_subaru.py  test_translate_header.py  test_translation.py  test_translator_helpers.py  test_visit_info.py
tests/data/: bad-megaprime.yaml  fitsheader-decam-0160496.yaml  fitsheader-decam-calexp-0412037_10.yaml  fitsheader-decam-instcal-c4d_190402_050618_ooi_VR_v1.yaml  fitsheader-decam-raw_dec050441_25.yaml  fitsheader-decam.yaml  fitsheader-hsc-HSCA04090107.json  fitsheader-hsc-HSCA04090107.yaml  fitsheader-hsc.json  fitsheader-hsc.yaml  fitsheader-megaprime-calexp-849375-14.yaml  fitsheader-megaprime.yaml  fitsheader-sdss-fpC-006377-g4-0399.yaml  fitsheader-suprimecam-CORR40535770.yaml  obsinfo-extensions-unknown-translator.json  obsinfo-full-extensions.json  obsinfo-full.json  obsinfo-unregistered.json  small.fits  visit_info.yaml
tests/data/bad_corrections/: DECam-ct4m20121211t220632.yaml
tests/data/corrections/: DECam-ct4m20121211t220632.yaml  SCUBA_test-20000101_00002.yaml
ups/: astro_metadata_translator.table  obs_metadata.cfg  obs_metadata.table
