[build-system]
requires = ["setuptools", "lsst-versions"]
build-backend = "setuptools.build_meta"

[project]
name = "astro-metadata-translator"
requires-python = ">=3.10.0"
description = "A translator for astronomical metadata."
license = {text = "BSD 3-Clause License"}
authors = [
    {name="Rubin Observatory Data Management", email="dm-admin@lists.lsst.org"},
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
]
keywords = ["lsst"]
dynamic = ["version"]
dependencies = [
    "astropy >=3.0.5",
    "pyyaml >=3.13",
    "click >= 8"
]

[project.optional-dependencies]
test = [
    "pytest"
]

[project.urls]
"Homepage" = "https://github.com/lsst/astro_metadata_translator"

[project.scripts]
astrometadata = "astro_metadata_translator.cli.astrometadata:main"

[tool.setuptools]
zip-safe = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
astro_metadata_translator = ["corrections/*/*.yaml", "corrections/*/*.md", "py.typed"]

[tool.setuptools.dynamic]
version = { attr = "lsst_versions.get_lsst_version" }

[tool.black]
line-length = 110
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 110
known_first_party = ["astro_metadata_translator"]

[tool.lsst_versions]
write_to = "python/astro_metadata_translator/version.py"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"  # Recommended as best practice

[tool.pydocstyle]
convention = "numpy"
# Our coding style does not require docstrings for magic methods (D105)
# Our docstyle documents __init__ at the class level (D107)
# We allow methods to inherit docstrings and this is not compatible with D102.
# Docstring at the very first line is not required
# D200, D205 and D400 all complain if the first sentence of the docstring does
# not fit on one line.
# D104 - we do not require documentation in __init__.py files.
add-ignore = ["D107", "D105", "D102", "D104", "D100", "D200", "D205", "D400"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py311"
line-length = 110
exclude = [
    "__init__.py",
]

[tool.ruff.lint]
ignore = [
    "N999",  # Invalid module name
    "D107",  # Document __init__ at class level.
    "D105",  # Do not require docstrings on magic methods.
    "D102",  # Can inherit docstrings.
    "D100",  # Modules are not required to include documentation.
    "D205",  # Does not understand if a summary is two lines long.
]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "N",  # pep8-naming
    "W",  # pycodestyle
    "D",  # pydocstyle
    "I",  # isort
    "RUF022",  # sort __all__
    "UP",  # pyupgrade
    "B",  # bugbear
]
extend-select = [
    "RUF100", # Warn about unused noqa
]

[tool.ruff.lint.isort]
known-first-party = ["astro_metadata_translator"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 79

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true
# Formatter does not know about indenting.
docstring-code-line-length = 69

[tool.numpydoc_validation]
checks = [
    "all",  # All except the rules listed below.
    "SA01",  # See Also section.
    "EX01",  # Example section.
    "SS06",  # Summary can go into second line.
    "GL01",  # Summary text can start on same line as """
    "GL08",  # Do not require docstring.
    "ES01",  # No extended summary required.
    "RT01",  # Unfortunately our @property trigger this.
    "RT02",  # Does not want named return value. DM style says we do.
    "SS05",  # pydocstyle is better at finding infinitive verb.
]
exclude = [
    '^astrometadata\.'  # CLI does not conform to numpydoc
]
