[metadata]
name = astro_metadata_translator
description = A translator for astronomical metadata.
author = Tim Jenness
author_email = tjenness@lsst.org
license = BSD 3-Clause License
url = https://github.com/lsst/astro_metadata_translator
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = True
package_dir=
    =python
packages=find:
install_requires =
  astropy >=3.0.5
  pyyaml >=3.13
tests_require =
  pytest >= 3.2
  flake8 >= 3.7.5
  pytest-flake8 >= 1.0.4

[options.packages.find]
where=python

[options.package_data]
astro_metadata_translator = corrections/*/*.yaml, corrections/*/*.md py.typed

[options.entry_points]
console_scripts =
  translate_header.py = astro_metadata_translator.bin.translateheader:main
  astrometadata = astro_metadata_translator.cli.astrometadata:main

[flake8]
max-line-length = 110
max-doc-length = 79
ignore = W503, E203
exclude = __init__.py version.py

[tool:pytest]
addopts = --flake8
flake8-ignore = W503 E203
