[metadata]
name = astro-metadata-translator
description = A translator for astronomical metadata.
author = Rubin Observatory Data Management
author_email = dm-admin@lists.lsst.org
license = BSD 3-Clause License
url = https://github.com/lsst/astro_metadata_translator
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Astronomy
long_description = file: README.md
long_description_content_type = text/markdown

keywords =
    lsst

[options]
zip_safe = True
package_dir=
    =python
packages=find:
setup_requires =
  setuptools >=46.0
install_requires =
  astropy >=3.0.5
  pyyaml >=3.13
  click >= 8
tests_require =
  pytest >= 3.2
  flake8 >= 3.7.5

[options.packages.find]
where=python

[options.package_data]
astro_metadata_translator = corrections/*/*.yaml, corrections/*/*.md py.typed

[options.entry_points]
console_scripts =
  translate_header.py = astro_metadata_translator.bin.translateheader:main
  astrometadata = astro_metadata_translator.cli.astrometadata:main

[flake8]
max-line-length = 110
max-doc-length = 79
ignore = W503, E203, E704
exclude = __init__.py version.py
